Revert "Merge branch 'apache:HDDS-11233' into HDDS-11233"
This reverts commit 16ae81ee1ff2f541cf002e7745144f07f60393d5, reversing
changes made to 0d2abc4b3e37fc0d6cca177761b6ef81d1c5693e.