@@ -86,11 +86,11 @@ fi
 # memory size.
 # export OZONE_HEAPSIZE_MIN=
 
-# Extra Java runtime options for all Ozone commands. Ozone does not override
-# the JVM's IP stack preference. To force IPv4-only networking:
+# Extra Java runtime options for all Ozone commands. We don't support
+# IPv6 yet/still, so by default the preference is set to IPv4.
 # export OZONE_OPTS="-Djava.net.preferIPv4Stack=true"
-# For Kerberos debugging, an extended option set logs more information:
-# export OZONE_OPTS="-Dsun.security.krb5.debug=true -Dsun.security.spnego.debug"
+# For Kerberos debugging, an extended option set logs more information
+# export OZONE_OPTS="-Djava.net.preferIPv4Stack=true -Dsun.security.krb5.debug=true -Dsun.security.spnego.debug"
 
 # Some parts of the shell code may do special things dependent upon
 # the operating system.  We have to set this here. See the next
@@ -154,10 +154,6 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # helper scripts # such as workers.sh, start-ozone.sh, etc.
 # export OZONE_WORKERS="${OZONE_CONF_DIR}/workers"
 
-# A space-separated list of worker host names, used as an alternative to the
-# OZONE_WORKERS file.  Only one of OZONE_WORKERS or OZONE_WORKER_NAMES may be set.
-# export OZONE_WORKER_NAMES=""
-
 ###
 # Options for all daemons
 ###
@@ -171,15 +167,6 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # or set differently in certain contexts (e.g., secure vs
 # non-secure)
 #
-
-# Extra Java runtime options for all Ozone server daemons (OM, SCM, DataNode,
-# S3 Gateway, Recon, HttpFS).  These get appended to OZONE_OPTS for such
-# daemons and are a convenient way to apply common options to all of them.
-# export OZONE_SERVER_OPTS=""
-
-# Simple override of the default log level used to build OZONE_ROOT_LOGGER and
-# OZONE_DAEMON_ROOT_LOGGER.  Defaults to INFO.
-# export OZONE_LOGLEVEL=INFO
 
 # Where (primarily) daemon log files are stored.
 # ${OZONE_HOME}/logs by default.
@@ -206,15 +193,6 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # Java property: hadoop.root.logger
 # export OZONE_DAEMON_ROOT_LOGGER=INFO,RFA
 
-# Default log4j setting for the HTTP request log of interactive commands
-# Java property: ozone.http.request.logger
-# export OZONE_HTTP_REQUEST_LOGGER=INFO,console
-
-# Default log4j setting for the HTTP request log of daemons spawned explicitly by
-# --daemon option of ozone command.
-# Java property: ozone.http.request.logger
-# export OZONE_DAEMON_HTTP_REQUEST_LOGGER=INFO,HttpAccess
-
 # Default log level and output location for security-related messages.
 # You will almost certainly want to change this on a per-daemon basis via
 # the Java property (i.e., -Dhadoop.security.logger=foo).
@@ -228,6 +206,16 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # Default name for the service level authorization file
 # Java property: hadoop.policy.file
 # export OZONE_POLICYFILE="hadoop-policy.xml"
+
+#
+# NOTE: this is not used by default!  <-----
+# You can define variables right here and then re-use them later on.
+# For example, it is common to use the same garbage collection settings
+# for all the daemons.  So one could define:
+#
+# export OZONE_GC_SETTINGS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps"
+#
+# .. and then use it when setting OZONE_OM_OPTS, etc. below
 
 ###
 # Secure/privileged execution
@@ -245,9 +233,6 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # data transfer protocol using non-privileged ports.
 # export JSVC_HOME=/usr/bin
 
-# Extra arguments to pass to jsvc when launching secure/privileged daemons.
-# export OZONE_DAEMON_JSVC_EXTRA_OPTS=""
-
 #
 # This directory contains pids for secure and privileged processes.
 #export OZONE_SECURE_PID_DIR=${OZONE_PID_DIR}
@@ -255,22 +240,14 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 #
 # This directory contains the logs for secure and privileged processes.
 # Java property: hadoop.log.dir
-# export OZONE_SECURE_LOG_DIR=${OZONE_LOG_DIR}
+# export OZONE_SECURE_LOG=${OZONE_LOG_DIR}
 
-###
-# Netty native (direct) memory caps (HDDS-11234)
-###
-# Both unshaded io.netty and the Ratis-shaded copy default their pooled
-# direct-memory ceiling to MaxDirectMemorySize (≈ -Xmx) per JVM, which
-# can let the resident size of a busy DataNode or S3 Gateway grow well
-# beyond the heap. To put a hard cap on each pool, export one or both
-# of the following before starting Ozone daemons. Values are raw byte
-# counts (suffixes like "m" or "g" are NOT supported by Netty's
-# property parser); for example, 536870912 = 512 MiB.
 #
-# For example, to cap each pool at 4 GiB on a DataNode with -Xmx16g:
-# export OZONE_NETTY_MAX_DIRECT_MEMORY=4294967296
-# export OZONE_RATIS_NETTY_MAX_DIRECT_MEMORY=4294967296
+# When running a secure daemon, the default value of OZONE_IDENT_STRING
+# ends up being a bit bogus.  Therefore, by default, the code will
+# replace OZONE_IDENT_STRING with OZONE_xx_SECURE_USER.  If one wants
+# to keep OZONE_IDENT_STRING untouched, then uncomment this line.
+# export OZONE_SECURE_IDENT_PRESERVE="true"
 
 ###
 # Ozone Manager specific parameters
@@ -298,48 +275,6 @@ export OZONE_OS_TYPE=${OZONE_OS_TYPE:-$(uname -s)}
 # and therefore may override any similar flags set in OZONE_OPTS
 #
 # export OZONE_SCM_OPTS=""
-
-###
-# S3 Gateway specific parameters
-###
-# Specify the JVM options to be used when starting the S3 Gateway.
-# These options will be appended to the options specified as OZONE_OPTS
-# and therefore may override any similar flags set in OZONE_OPTS
-#
-# export OZONE_S3G_OPTS=""
-
-###
-# Recon specific parameters
-###
-# Specify the JVM options to be used when starting Recon.
-# These options will be appended to the options specified as OZONE_OPTS
-# and therefore may override any similar flags set in OZONE_OPTS
-#
-# export OZONE_RECON_OPTS=""
-
-###
-# HttpFS Gateway specific parameters
-###
-# Specify the JVM options to be used when starting the HttpFS Gateway.
-# These options will be appended to the options specified as OZONE_OPTS
-# and therefore may override any similar flags set in OZONE_OPTS
-#
-# export OZONE_HTTPFS_OPTS=""
-
-###
-# Client and tool command specific parameters
-###
-# Specify the JVM options to be used when running the corresponding command
-# (ozone sh, fs, admin, debug, freon, vapor).  These options will be appended
-# to the options specified as OZONE_OPTS and therefore may override any
-# similar flags set in OZONE_OPTS
-#
-# export OZONE_SH_OPTS=""
-# export OZONE_FS_OPTS=""
-# export OZONE_ADMIN_OPTS=""
-# export OZONE_DEBUG_OPTS=""
-# export OZONE_FREON_OPTS=""
-# export OZONE_VAPOR_OPTS=""
 
 ###
 # Advanced Users Only!
